@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>681</width>
-    <height>730</height>
+    <width>849</width>
+    <height>750</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout_3">
@@ -33,6 +33,23 @@
       <string>Database</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
+      <item row="5" column="1">
+       <widget class="QCheckBox" name="chkCustomConnection">
+        <property name="text">
+         <string>enable</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="0">
+       <widget class="QLabel" name="lCustomConnection">
+        <property name="text">
+         <string>Connection String:</string>
+        </property>
+        <property name="wordWrap">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
       <item row="0" column="0">
        <widget class="QLabel" name="lName">
         <property name="text">
@@ -108,7 +125,7 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="1">
+      <item row="7" column="1">
        <spacer name="verticalSpacer_2">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -120,6 +137,9 @@
          </size>
         </property>
        </spacer>
+      </item>
+      <item row="6" column="1">
+       <widget class="QPlainTextEdit" name="teCustomConnection"/>
       </item>
      </layout>
     </widget>
